Attempting to solve the contrast issues. Will run WAVE and see what populates

--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -53,7 +53,7 @@ ul li{
     border: 1px solid #ddd;
     padding: 20px;
     margin-bottom: 20px;
-    color: white;
+    color: #ddd;
 }
 
 footer {
